--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 .container{
   width: 100%;
@@ -58,6 +59,11 @@ li{
     backdrop-filter: blur(5px);
     width: 100%;
   border-radius: 50px;
+  transition: 0.5s;
+}
+li:hover{
+  box-shadow: 0px 0px 2px 2px white;
+
 }
 a{
   display: flex;
@@ -77,7 +83,6 @@ h4{
   align-items: center;
   justify-content: center;
   gap: 10px;
-  color: #000;
 }
 .tab__link svg{
   color: gray;
